Update, and prep for blog

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,39 +1,151 @@
-.image-holder{
-  border-radius: 50%;
-  overflow: hidden;
-  display: inline-flex;
-  width: 200px;
-}
-.content{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+
+// $text: RGB(249, 246, 239);
+$text: RGB(33, 29, 30);
+// $bg:RGB(109, 106, 101);
+$bg:RGB(233, 230, 225);
+$link: #c13838;;
+$link-active: #520505;
+
+$link-dark-desat: desaturate(darken($link, 20%), 20%);
+$link-active-dark-desat: desaturate(darken($link-active, 20%), 20%);
+
+
+html{
+  color: $text;
+  background-color: $bg;
 }
 
-  
-.banner-wrapper {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-}
-  
-.banner {
-  position: absolute;
-  overflow: hidden;
-  
-  &.dev {
-    // transform: skew(-30deg);
-    width: 200px;
-    .banner-content {
-      // transform: skew(30deg);
-    }
-  }
-  .banner-content {
-    height: 200px;
-  }
-  img {
-    width: 200px;
+a{
+  color: $link;
+  &:hover{
+    color: $link-active;
   }
 }
+
+
+// Defining font sizes for different heading levels
+$base-font-size: 16px; // Assuming 1rem = 16px
+
+h1 {
+  font-size: 2.25rem; // 36px
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 700; // Bold
+}
+
+h2 {
+  font-size: 2rem; // 32px
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 600; // Semi-bold
+}
+
+h3 {
+  font-size: 1.75rem; // 28px
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 500; // Medium
+}
+
+h4 {
+  font-size: 1.5rem; // 24px
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 400; // Regular
+}
+
+h5 {
+  font-size: 1.25rem; // 20px
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 300; // Light
+}
+
+h6 {
+  font-size: 1rem; // 16px
+  font-family: "Cormorant Garamond", serif;
+  font-style: italic;
+  font-weight: 300; // Light Italic
+}
+
+
+.cormorant-garamond-light {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.cormorant-garamond-regular {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.cormorant-garamond-medium {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.cormorant-garamond-semibold {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.cormorant-garamond-bold {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.cormorant-garamond-light-italic {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.cormorant-garamond-regular-italic {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.cormorant-garamond-medium-italic {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.cormorant-garamond-semibold-italic {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.cormorant-garamond-bold-italic {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.proza-libre-regular, p, span, label, input, textarea, select, button, a {
+  font-family: "Proza Libre", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+}
+
+.proza-libre-medium {
+  font-family: "Proza Libre", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.proza-libre-semibold, strong {
+  font-family: "Proza Libre", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 16px;
+}
+
+
+
