--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -3,3 +3,61 @@
   padding: 0 1rem;
   margin: 3rem auto 6rem;
 }
+
+// styles/Home.module.scss
+.imageNameHolder {
+    display: grid;
+    grid-template-columns: 50px 5fr 1fr;
+    -moz-box-align: center;
+    align-items: center;
+
+  h1{
+    margin-left: 20px;
+  }
+}
+.links{
+  display: flex;
+  justify-content: flex-end;
+  // margin-top: 20px;
+  gap: 20px;
+}
+.imageHolder{
+  border-radius: 50%;
+  overflow: hidden;
+  display: inline-flex;
+  width: 50px;
+  margin-right: 20px;
+}
+.content{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+}
+
+  
+.bannerWrapper {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+  
+.bannerDesign {
+  position: absolute;
+  overflow: hidden;
+
+  img {
+    width: 50px;
+  }
+}
+.bannerContent {
+  height: 50px;
+}
+
+.bannerDev {
+  width: 50px;
+  position: absolute;
+  overflow: hidden;
+}
